# icrc7_launchpad

./: Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  icrc7_launchpad.sh  uploader.sh
scripts/: icrc7.sh  icrc7_archive.sh  uploader.sh  wasm.sh
src/ icrc7_types/: Cargo.toml
src/ icrc7_types/src/: icrc37_types.rs  icrc3_types.rs  icrc7_types.rs
src/archive/: archive.did  archive.most  archive.wasm  constructor.did  ic_icrc1_archive.did  index.js  init_args.txt  service.did  service.did.d.ts  service.did.js
src/asset_uploader/: package-lock.json  package.json  uploader.js
src/icrc7/: Cargo.toml  icrc7.did
src/icrc7/src/: archive.rs  candid_file_generator.rs  cycles.rs  errors.rs  guards.rs  icrc37_query_method.rs  icrc37_types.rs  icrc37_update_method.rs  icrc3_query_method.rs  icrc3_types.rs  icrc7_types.rs  init_method.rs  lib.rs  memory.rs  query_method.rs  state.rs  update_method.rs  utils.rs
src/icrc7_archive/: Cargo.toml  icrc7_archive.did
src/icrc7_archive/src/: candid_file_generator.rs  guards.rs  init_method.rs  lib.rs  query_method.rs  state.rs  types.rs  update_method.rs
src/icrc7_archive/wasm/: icrc7_archive.did  icrc7_archive.wasm
src/icrc7_launchpad/: Cargo.toml  icrc7_launchpad.did
src/icrc7_launchpad/src/: candid_file_generator.rs  lib.rs  update_method.rs
src/icrc7_launchpad_backend/: Cargo.toml
src/icrc7_types/: Cargo.toml
src/icrc7_types/src/: icrc7_types.rs  lib.rs
src/icrc_nft_types/: Cargo.toml
tests/: Cargo.toml
tests/src/: lib.rs
wasm/: ic_canister_assets.did  icrc7.did
