[package]
name = "icrc7_archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.7"
ciborium = "0.2.1"
ic-cdk = "0.13.2"
ic-cdk-macros = "0.13.2"
ic-stable-structures = "0.6.1"
serde = { version = "1", features = ["derive"]}
serde_derive = "1.0.166"
serde_bytes = "0.11.11"
icrc-ledger-types = "0.1.5"
num-bigint = "0.4"
num-traits = "0.2"