[package]
name = "icrc7_launchpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.7"
ic-cdk = "0.13.2"
ic-cdk-macros = "0.13.2"
icrc-ledger-types = "0.1.1"
serde = { version = "1.0.188", features = ["derive"] }
icrc7-types = { path = "../icrc7_types" }