[package]
name = "icrc7-types"
version = "0.1.0"
authors = ["Terry.Tu <tuminfei1981@gmail.com>"]
edition = "2021"
description = "ICRC7 basic type definitions"
license = "MIT"
repository = "https://github.com/tuminfei/icrc7_launchpad"
homepage = "https://github.com/tuminfei/icrc7_launchpad"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icrc-ledger-types = "0.1.5"
candid = "0.10.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_bytes = "0.11"
ic-stable-structures = "0.6.1"
